# kendallcoding202.github.io

./: .gitignore  README.md  enter.js  index.html
.github/workflows/: kovyr-vault-build.yml  windows-build.yml
About Me/: about.js  index.html
CSS/: mysite.css
Contact Me/: index.html  java.js
Game/: game.css  game.js  index.html
Hobbies/: index.html
Home/: home.js  index.html
KovyrInterior/: PRIVACY.md  README.md  STORE.md
KovyrInterior/KovyrInterior/: Info.plist  KovyrInterior-Bridging-Header.h  KovyrInterior.entitlements  KovyrInteriorApp.swift
KovyrInterior/KovyrInterior.xcodeproj/: project.pbxproj
KovyrInterior/KovyrInteriorWidget/: KovyrInteriorWidget.entitlements  KovyrInteriorWidget.swift  SharedState.swift
KovyrInterior/docs/: kovyr-evidence-integration.md
NetScan/: README.md
NetScan/NetScan/: Info.plist  NetScanApp.swift
NetScan/NetScan.xcodeproj/: project.pbxproj
Photo/: photo.html
breach-prototype/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
breach-prototype/src-tauri/: Cargo.toml  tauri.conf.json
breach-prototype/src-tauri/icons/: icon.icns
breach-prototype/src-tauri/src/: main.rs
crypto-bot/: README.md  config.example.yaml  run.py
driftbot/: .gitignore  DEPLOY_railway.md  Procfile  README.md  config.example.yaml  requirements.txt  run.py
kovyr-interior-privacy/: index.html
kovyr-vault/: README.md  pyproject.toml
kovyr-vault/kovyr_vault/: __init__.py  cli.py  crypto.py  dedupe.py  gui.py  hashing.py  monitor.py  notify.py  protect_folder.py  quarantine.py  report.py  scanner.py  util.py  vault.py
kovyr-vault/packaging/: entry.py  gui_entry.py  kovyr.icns  make_icon.py  windows-installer.iss
kovyr-vault/tests/: test_alerts.py  test_crypto.py  test_gui_logic.py  test_incremental.py  test_monitor.py  test_notify.py  test_protect_folder.py  test_quarantine.py  test_report.py  test_scan_dedupe.py  test_vault.py
(+140 files in other folders)
