[package]
name = "breach"
version = "0.1.0"
description = "BREACH — a hacking roguelike deckbuilder"
authors = ["Kendall"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# smaller, faster release binaries for shipping on Steam
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
